# mdq

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  date.txt  help.txt  notes.txt  release_procedure.md  rustfmt.toml
.github/: release.yml
.github/gha_assets/: crate-doc-root-redirect.html  release_pr_template.md
.github/workflows/: binary-verify.yml  build-release.yml  cargo_to_gh  coverage.yml  formatting.yml  list-targets.yml  post-release.yml  pr-checks.yml  prepare-new-release.yml  readme-checks.yml  release-assets.yml  release-publish.yml  rust.yml  system-test.yml
examples/: hello-tree.txt  hello.md
githooks/: post-commit
scripts/: cargo_to_gh  common.sh  flatten-rustdoc-json  installer.sh  percent_to_color  percent_to_shields_gist  system_test
src/: cli.rs  fmt_json.rs  fmt_md.rs  fmt_md_inlines.rs  fmt_plain.rs  fmt_plain_writer.rs  fmt_str.rs  footnote_transform.rs  lib.rs  link_transform.rs  main.rs  matcher.rs  md_to_yaml_debug.rs  misc_util.rs  normalized_ast.rs  output.rs  parse_common.rs  parsing_iter.rs  select.rs  str_utils.rs  tree.rs  tree_ref.rs  tree_ref_serde.rs  tree_test_utils.rs  tree_to_json.rs  tree_visitor.rs  utils_for_test.rs  vec_utils.rs  words_buffer.rs
src/md_elem/: concatenate.rs  flat_inlines.rs  inline_regex_replace.rs  mod.rs  tree.rs  tree_ref.rs  tree_ref_serde.rs  tree_test_utils.rs
src/output/: find_numbered_links.rs  fmt_md.rs  fmt_md_inlines.rs  fmt_plain_inline.rs  fmt_plain_str.rs  fmt_plain_writer.rs  footnote_transform.rs  link_transform.rs  mod.rs  output_adapter.rs  tree_ref_serde.rs
src/query/: error.rs  grammar.pest  match_replace_try_from.rs  matcher.rs  matcher_try_from.rs  mod.rs  notes  pest.rs  query.rs  selector_try_from.rs  selectors.rs  selectors_parse.rs  strings.rs  traversal.rs  traversal_composites.rs
src/run/: cli.rs  cli_option.rs  lib.rs  mod.rs  run.rs  run_main.rs
src/select/: adapter.rs  api.rs  base.rs  interface.rs  list_item.rs  match_replace.rs  match_selector.rs  matcher.rs  matchers.rs  mod.rs  section.rs  sel_block_quote.rs  sel_chain.rs  sel_code_block.rs  sel_html.rs  sel_image.rs  sel_link.rs  sel_link_like.rs  sel_list_item.rs  sel_paragraph.rs  sel_section.rs  sel_single_matcher.rs  sel_table.rs  selector.rs  selectors.rs  string_matcher.rs  util.rs
src/selectors/: base.rs  list_item.rs  mod.rs  section.rs  util.rs
src/util/: enum_maker.rs  mod.rs  number_assigner.rs  output.rs  str_utils.rs  utils_for_test.rs  vec_utils.rs  words_buffer.rs
tests/: README.md  integ_test.rs
tests/md_cases/: bad_queries.toml  file_args.toml  footnote_renumbering.toml  (+20 more)
