[package]
name = "mdq"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Select specific elements in a Markdown document"
repository = "https://github.com/yshavit/mdq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
markdown = "1.0.0-alpha.20"
memchr = "2.7.4"
paste = "1.0"
pest = "2.8"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
regex = "1.10.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
indoc = "2"
lazy_static = "1.4.0"
pretty_assertions = "1.4"

[build-dependencies]
indoc = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
