[package]
authors = ["Yuval Shavit <dev@yuvalshavit.com>"]
name = "mdq"
version = "0.10.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Select and render specific elements in a Markdown document"
repository = "https://github.com/yshavit/mdq"
keywords = ["markdown", "parsing"]
categories = ["command-line-utilities", "text-editors"]
rust-version = "1.85.1"

[dependencies]
clap = { version = "4", features = ["derive"] }
derive_builder = "0.20.2"
markdown = "1"
memchr = "2"
paste = "1"
pest = "2"
pest_derive = { version = "2", features = ["grammar-extras"] }
fancy-regex = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
indoc = "2"
lazy_static = "1"

[build-dependencies]
indoc = "2"
serde = { version = "1", features = ["derive"] }
toml = "1"

[profile.release]
codegen-units = 1
lto = true
